--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -4,7 +4,7 @@ name: build and push docker containers
 on:
   push:
     branches:
-      - master
+      - main
       - develop
     tags:
       - "**"
